# ruskel

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  libruskel.rs
crates/libruskel/: Cargo.toml
crates/libruskel/src/: cargoutils.rs  crateutils.rs  error.rs  filter.rs  frontmatter.rs  highlight.rs  keywords.rs  lib.rs  render.rs  ruskel.rs  search.rs  signature.rs  target.rs  toolchain.rs
crates/libruskel/tests/: enums.rs  filter.rs  functions.rs  impls.rs  listing.rs  macros.rs  misc.rs  modules.rs  private_flag.rs  structs.rs  targets.rs  traits.rs  utils.rs
crates/mcp/: Cargo.toml  ruskel-description.txt
crates/mcp/src/: lib.rs  server.rs  tools.rs
crates/mcp/tests/: integration_test.rs
crates/ruskel/: Cargo.toml
crates/ruskel/src/: main.rs
crates/ruskel/tests/: cli.rs
plans/: cleanups.md  deslop-skill-rewrite.md  todo.md
scripts/generate_std_mapping/: Cargo.toml  README.md
scripts/generate_std_mapping/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
