[workspace.package]
version = "0.0.11"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Generates skeletonized outlines of Rust crates"
license = "MIT"
repository = "https://github.com/cortesi/ruskel"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[workspace.lints.rust]
missing_docs = "warn"

# Enable briefly, run cargo clippy (without --tests and --examples), fix
# unused deps, then disable it again.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"

[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.dependencies]
libruskel = { version = "0.0.11", path = "crates/libruskel" }
ruskel-mcp = { version = "0.0.11", path = "crates/mcp" }
