[workspace.package]
version = "0.0.11"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Generates skeletonized outlines of Rust crates"
license = "MIT"
repository = "https://github.com/cortesi/ruskel"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[workspace.lints.rust]
missing_docs = "warn"

# Enable briefly, run cargo clippy (without --tests and --examples), fix
# unused deps, then disable it again.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"

[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.dependencies]
libruskel = { version = "0.0.11", path = "crates/libruskel" }
ruskel-mcp = { version = "0.0.11", path = "crates/mcp" }

anyhow = "1.0.100"
async-trait = "0.1"
bitflags = "2.10.0"
cargo = "0.93.0"
cargo_toml = "0.22.3"
clap = { version = "4.5.53", features = ["derive"] }
once_cell = "1.21"
pretty_assertions = "1.4.1"
regex = "1.12.2"
rust-format = "0.3.4"
rustdoc-json = "0.9.7"
rustdoc-types = "0.57.0"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0"
