[package]
name = "libruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.99"
cargo = "0.90.0"
cargo_toml = "0.22.3"
once_cell = "1.21"
regex = "1.11.1"
rust-format = "0.3.4"
rustdoc-json = "0.9.7"
rustdoc-types = "0.55.0"
semver = "1.0.26"
serde_json = "1.0.142"
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
tempfile = "3.20.0"
thiserror = "2.0.14"

[dev-dependencies]
pretty_assertions = "1.4.1"
