[package]
name = "libruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
cargo = "0.92.0"
cargo_toml = "0.22.3"
once_cell = "1.21"
regex = "1.12.2"
rust-format = "0.3.4"
rustdoc-json = "0.9.7"
rustdoc-types = "0.56.0"
semver = "1.0.27"
serde_json = "1.0.145"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
