[package]
name = "libruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
cargo = { workspace = true }
cargo_toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
rust-format = { workspace = true }
rustdoc-json = { workspace = true }
rustdoc-types = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
