[package]
name = "ruskel-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Ruskel - generates skeletonized outlines of Rust crates"
readme.workspace = true

[dependencies]
libruskel = { workspace = true }
tenx-mcp = "0.1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }