[package]
name = "ruskel-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Ruskel - generates skeletonized outlines of Rust crates"
readme.workspace = true

[lints]
workspace = true

[dependencies]
libruskel = { workspace = true }
tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "94da224" }
#tenx-mcp = { path= "../../../tenx-mcp/crates/tenx-mcp", rev = "94da224" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
