[package]
name = "ruskel-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Ruskel - generates skeletonized outlines of Rust crates"
readme.workspace = true

[lints]
workspace = true

[dependencies]
libruskel = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tmcp = "0.3.0"
schemars = "1.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
