[package]
name = "ruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
libruskel = { workspace=true }
ruskel-mcp = { version = "0.0.10", path = "../mcp" }
clap = { version = "4.5.8", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
which = "8.0"

