[package]
name = "ruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
libruskel = { workspace=true }
ruskel-mcp = { workspace=true }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
which = { workspace = true }
shell-words = { workspace = true }
tracing-subscriber = { workspace = true }
